Backup and restore permissions as well as major performance improvements
Backups will not store and optionally restore the permissions of files in your backups. Furthermore, introducing a new internal storage engine (Currently not supported on MacOS). Performance testing indicates a rebuild of a large backup is approximately 4 times faster with the new implementation. Additional improvements include.

* Internal improvements to reduce memory consumption.
* Better indication and actionable feedback to activate shares when needed.
* Some cleanup for stats being reported by back-end to front-end.
* Changed "Currently Inactive" status to "Idle".
* Make sure sources are sorted by name in the restore UI.
* Show the correct progress status during the rebuild in UI.